--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
     #one{
         /* border: 2px solid white; */
-        /* width: 300px; */
+        width: 300px;
         align-items: center;
         background-color: white;
         margin:5%;
